--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,9 @@
-extends layout
-
-block content
-  h1 呵呵
-  p Welcome to
-  p hehe cjs
+doctype html
+html
+  head
+    title= title
+    link(rel='stylesheet', href='/static/style.css')
+  body
+    h1 呵呵
+    p Welcome to
+    p hehe cjs
