--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     script(src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.2/??flexible_css.js,flexible.js")
+    link(rel='stylesheet', href='/static/common.css')
     link(rel='stylesheet', href='/static/#{tag}_app.css')
   body
     div#app
