--- a/views/index.jade
+++ b/views/index.jade
@@ -2,10 +2,14 @@ doctype html
 html
   head
     title= title
-    script(src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.2/??flexible_css.js,flexible.js")
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    //- script(src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.2/??flexible_css.js,flexible.js")
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='/static/#{tag}_common.css')
     link(rel='stylesheet', href='/static/#{tag}_app.css')
   body
     div#app
+    
     script(src='/static/#{tag}_common.js')
     script(src='/static/#{tag}_app.js')
